fix main nav collapse function

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,6 +79,21 @@ html, body {
     background-color: rgba(1, 255, 255, 0);
 }
 
+/* Account forms styling */
+
+.account-box {
+    text-align: center;
+    min-height: 400px;
+    width: 300px;
+    background-color: rgba(250,250,250,.8);
+    border-radius: 50px;
+    border: 2px solid black;
+    animation-duration:1s;
+    animation-name: store-fade-in;
+    padding: 30px;
+    margin: auto;
+}
+
 /* Order page styling */
 
 #storefront {
